--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description" content="intelligent research platform: wx version">
   <meta name="author" content="liucaizhong">
-  <title>通讯录</title>
+  <title>南土资产</title>
   <!-- built style files will be auto injected -->
 </head>
 <body>
