--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description" content="intelligent research platform: wx version">
   <meta name="author" content="liucaizhong">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <title>微投研</title>
   <!-- <title>工作计划</title> -->
   <!-- built style files will be auto injected -->
